Update hadoop-env.sh